[gd_scene load_steps=29 format=2]

[ext_resource path="res://pck/assets/menu/bg-4.jpg" type="Texture" id=1]
[ext_resource path="res://pck/prefabs/Setting.tscn" type="PackedScene" id=2]
[ext_resource path="res://pck/scenes/kmr.gd" type="Script" id=3]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=4]
[ext_resource path="res://pck/assets/menu/NewMenu/Back.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/menu/slot.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/menu/NewMenu/Money.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/common/DS-DIGIB.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://pck/assets/common/backdrop.png" type="Texture" id=9]
[ext_resource path="res://pck/assets/common/spinner.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=22]
size = 30
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 600, 200, 200 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 1000, 449.5 )
scale = Vector2( 1, 1.00333 )
texture = ExtResource( 1 )

[node name="Exit" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 307.0
margin_bottom = 127.0
texture_normal = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Setting" parent="." instance=ExtResource( 2 )]

[node name="provider" type="ScrollContainer" parent="."]
margin_left = 200.0
margin_top = 229.0
margin_right = 1976.0
margin_bottom = 849.0
__meta__ = {
"_edit_group_": true
}

[node name="p" type="GridContainer" parent="provider"]
margin_right = 1600.0
margin_bottom = 2590.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 5

[node name="0" type="TextureButton" parent="provider/p"]
margin_right = 280.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="1" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_right = 610.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="2" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_right = 940.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="3" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_right = 1270.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="4" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_right = 1600.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="5" type="TextureButton" parent="provider/p"]
margin_top = 330.0
margin_right = 280.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="6" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_top = 330.0
margin_right = 610.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="7" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_top = 330.0
margin_right = 940.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="8" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_top = 330.0
margin_right = 1270.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="9" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_top = 330.0
margin_right = 1600.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="10" type="TextureButton" parent="provider/p"]
margin_top = 660.0
margin_right = 280.0
margin_bottom = 940.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="11" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_top = 660.0
margin_right = 610.0
margin_bottom = 940.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="12" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_top = 660.0
margin_right = 940.0
margin_bottom = 940.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="13" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_top = 660.0
margin_right = 1270.0
margin_bottom = 940.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="14" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_top = 660.0
margin_right = 1600.0
margin_bottom = 940.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="15" type="TextureButton" parent="provider/p"]
margin_top = 990.0
margin_right = 280.0
margin_bottom = 1270.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="16" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_top = 990.0
margin_right = 610.0
margin_bottom = 1270.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="17" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_top = 990.0
margin_right = 940.0
margin_bottom = 1270.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="18" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_top = 990.0
margin_right = 1270.0
margin_bottom = 1270.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="19" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_top = 990.0
margin_right = 1600.0
margin_bottom = 1270.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="20" type="TextureButton" parent="provider/p"]
margin_top = 1320.0
margin_right = 280.0
margin_bottom = 1600.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="21" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_top = 1320.0
margin_right = 610.0
margin_bottom = 1600.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="22" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_top = 1320.0
margin_right = 940.0
margin_bottom = 1600.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="23" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_top = 1320.0
margin_right = 1270.0
margin_bottom = 1600.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="24" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_top = 1320.0
margin_right = 1600.0
margin_bottom = 1600.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="25" type="TextureButton" parent="provider/p"]
margin_top = 1650.0
margin_right = 280.0
margin_bottom = 1930.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="26" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_top = 1650.0
margin_right = 610.0
margin_bottom = 1930.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="27" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_top = 1650.0
margin_right = 940.0
margin_bottom = 1930.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="28" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_top = 1650.0
margin_right = 1270.0
margin_bottom = 1930.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="29" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_top = 1650.0
margin_right = 1600.0
margin_bottom = 1930.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="30" type="TextureButton" parent="provider/p"]
margin_top = 1980.0
margin_right = 280.0
margin_bottom = 2260.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="31" type="TextureButton" parent="provider/p"]
margin_left = 330.0
margin_top = 1980.0
margin_right = 610.0
margin_bottom = 2260.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="32" type="TextureButton" parent="provider/p"]
margin_left = 660.0
margin_top = 1980.0
margin_right = 940.0
margin_bottom = 2260.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="33" type="TextureButton" parent="provider/p"]
margin_left = 990.0
margin_top = 1980.0
margin_right = 1270.0
margin_bottom = 2260.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="34" type="TextureButton" parent="provider/p"]
margin_left = 1320.0
margin_top = 1980.0
margin_right = 1600.0
margin_bottom = 2260.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="35" type="TextureButton" parent="provider/p"]
margin_top = 2310.0
margin_right = 280.0
margin_bottom = 2590.0
rect_min_size = Vector2( 280, 280 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="Balance" type="Sprite" parent="."]
position = Vector2( 1792, 104 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Balance"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -17.0
margin_right = -182.0
margin_bottom = -68.0
custom_fonts/font = SubResource( 22 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Backdrop" type="Node2D" parent="."]
visible = false

[node name="BG" type="Sprite" parent="Backdrop"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 1000, 450 )
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )

[node name="Spinner" type="AnimatedSprite" parent="Backdrop"]
position = Vector2( 1000, 450 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 23 )
frame = 11
playing = true

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="provider/p/0" to="." method="_on_game_pressed" binds= [ "thai-hi-lo2", "KM-TABLE-009" ]]
[connection signal="pressed" from="provider/p/1" to="." method="_on_game_pressed" binds= [ "belangkai2", "KM-TABLE-010" ]]
[connection signal="pressed" from="provider/p/2" to="." method="_on_game_pressed" binds= [ "dragon-tiger2", "KM-TABLE-011" ]]
[connection signal="pressed" from="provider/p/3" to="." method="_on_game_pressed" binds= [ "fish-prawn-crab2", "KM-TABLE-013" ]]
[connection signal="pressed" from="provider/p/4" to="." method="_on_game_pressed" binds= [ "vn_fish-prawn-crab", "KM-TABLE-014" ]]
[connection signal="pressed" from="provider/p/5" to="." method="_on_game_pressed" binds= [ "sicbo", "KM-TABLE-015" ]]
[connection signal="pressed" from="provider/p/6" to="." method="_on_game_pressed" binds= [ "taixiu", "KM-TABLE-017" ]]
[connection signal="pressed" from="provider/p/7" to="." method="_on_game_pressed" binds= [ "keno", "KM-TABLE-018" ]]
[connection signal="pressed" from="provider/p/8" to="." method="_on_game_pressed" binds= [ "thai-fpc", "KM-TABLE-019" ]]
[connection signal="pressed" from="provider/p/9" to="." method="_on_game_pressed" binds= [ "Bài Cào", "KM-TABLE-020" ]]
[connection signal="pressed" from="provider/p/10" to="." method="_on_game_pressed" binds= [ "CardMatka", "KM-TABLE-022" ]]
[connection signal="pressed" from="provider/p/11" to="." method="_on_game_pressed" binds= [ "Xocdia2", "KM-TABLE-023" ]]
[connection signal="pressed" from="provider/p/12" to="." method="_on_game_pressed" binds= [ "Fan Tan Classic", "KM-TABLE-024" ]]
[connection signal="pressed" from="provider/p/13" to="." method="_on_game_pressed" binds= [ "Fruit Roulette", "KM-TABLE-025" ]]
[connection signal="pressed" from="provider/p/14" to="." method="_on_game_pressed" binds= [ "European Roulette", "KM-TABLE-027" ]]
[connection signal="pressed" from="provider/p/15" to="." method="_on_game_pressed" binds= [ "7 Up 7 Down", "KM-TABLE-028" ]]
[connection signal="pressed" from="provider/p/16" to="." method="_on_game_pressed" binds= [ "Bai Buu", "KM-TABLE-029" ]]
[connection signal="pressed" from="provider/p/17" to="." method="_on_game_pressed" binds= [ "Jhandi Munda", "KM-TABLE-030" ]]
[connection signal="pressed" from="provider/p/18" to="." method="_on_game_pressed" binds= [ "Baccarat", "KM-TABLE-026" ]]
[connection signal="pressed" from="provider/p/19" to="." method="_on_game_pressed" binds= [ "Andar Bahar", "KM-TABLE-032" ]]
[connection signal="pressed" from="provider/p/20" to="." method="_on_game_pressed" binds= [ "Pai Kang", "KM-TABLE-033" ]]
[connection signal="pressed" from="provider/p/21" to="." method="_on_game_pressed" binds= [ "Kingmaker Pok Deng", "KM-TABLE-034" ]]
[connection signal="pressed" from="provider/p/22" to="." method="_on_game_pressed" binds= [ "Bola Golek", "KM-TABLE-035" ]]
[connection signal="pressed" from="provider/p/23" to="." method="_on_game_pressed" binds= [ "Coin Toss", "KM-TABLE-036" ]]
[connection signal="pressed" from="provider/p/24" to="." method="_on_game_pressed" binds= [ "Bonus Dice", "KM-TABLE-043" ]]
[connection signal="pressed" from="provider/p/25" to="." method="_on_game_pressed" binds= [ "Dota Hi-Lo", "KM-TABLE-044" ]]
[connection signal="pressed" from="provider/p/26" to="." method="_on_game_pressed" binds= [ "Monkey King Roulette", "KM-TABLE-045" ]]
[connection signal="pressed" from="provider/p/27" to="." method="_on_game_pressed" binds= [ "Cards Hi Lo", "KM-TABLE-037" ]]
[connection signal="pressed" from="provider/p/28" to="." method="_on_game_pressed" binds= [ "Blackjack", "KM-TABLE-038" ]]
[connection signal="pressed" from="provider/p/29" to="." method="_on_game_pressed" binds= [ "32 Cards", "KM-TABLE-039" ]]
[connection signal="pressed" from="provider/p/30" to="." method="_on_game_pressed" binds= [ "Plinko", "KM-TABLE-040" ]]
[connection signal="pressed" from="provider/p/31" to="." method="_on_game_pressed" binds= [ "Teen Patti", "KM-TABLE-046" ]]
[connection signal="pressed" from="provider/p/32" to="." method="_on_game_pressed" binds= [ "Heist", "KM-TABLE-047" ]]
[connection signal="pressed" from="provider/p/33" to="." method="_on_game_pressed" binds= [ "HorseRacing", "KM-TABLE-048" ]]
[connection signal="pressed" from="provider/p/34" to="." method="_on_game_pressed" binds= [ "5CardPoker", "KM-TABLE-049" ]]
[connection signal="pressed" from="provider/p/35" to="." method="_on_game_pressed" binds= [ "Minesweeper", "KM-TABLE-042" ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
